Add to model and add reference implementation
