# server/swagger_server/models/__init__.py
@@ -3,4 +3,9 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.offence import Offence
 from swagger_server.models.person import Person
+from swagger_server.models.police import Police
+from swagger_server.models.school import School
+from swagger_server.models.service_map import ServiceMap
+from swagger_server.models.source_data import SourceData
