# server/swagger_server/models/offence.py
@@ -1,0 +1,114 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Offence(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, date_of_offence: date=None, type_of_offence: str=None, nature_of_involvement: str=None):  # noqa: E501
+        """Offence - a model defined in Swagger
+
+        :param date_of_offence: The date_of_offence of this Offence.  # noqa: E501
+        :type date_of_offence: date
+        :param type_of_offence: The type_of_offence of this Offence.  # noqa: E501
+        :type type_of_offence: str
+        :param nature_of_involvement: The nature_of_involvement of this Offence.  # noqa: E501
+        :type nature_of_involvement: str
+        """
+        self.swagger_types = {
+            'date_of_offence': date,
+            'type_of_offence': str,
+            'nature_of_involvement': str
+        }
+
+        self.attribute_map = {
+            'date_of_offence': 'dateOfOffence',
+            'type_of_offence': 'typeOfOffence',
+            'nature_of_involvement': 'natureOfInvolvement'
+        }
+        self._date_of_offence = date_of_offence
+        self._type_of_offence = type_of_offence
+        self._nature_of_involvement = nature_of_involvement
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Offence':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Offence of this Offence.  # noqa: E501
+        :rtype: Offence
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def date_of_offence(self) -> date:
+        """Gets the date_of_offence of this Offence.
+
+
+        :return: The date_of_offence of this Offence.
+        :rtype: date
+        """
+        return self._date_of_offence
+
+    @date_of_offence.setter
+    def date_of_offence(self, date_of_offence: date):
+        """Sets the date_of_offence of this Offence.
+
+
+        :param date_of_offence: The date_of_offence of this Offence.
+        :type date_of_offence: date
+        """
+
+        self._date_of_offence = date_of_offence
+
+    @property
+    def type_of_offence(self) -> str:
+        """Gets the type_of_offence of this Offence.
+
+
+        :return: The type_of_offence of this Offence.
+        :rtype: str
+        """
+        return self._type_of_offence
+
+    @type_of_offence.setter
+    def type_of_offence(self, type_of_offence: str):
+        """Sets the type_of_offence of this Offence.
+
+
+        :param type_of_offence: The type_of_offence of this Offence.
+        :type type_of_offence: str
+        """
+
+        self._type_of_offence = type_of_offence
+
+    @property
+    def nature_of_involvement(self) -> str:
+        """Gets the nature_of_involvement of this Offence.
+
+
+        :return: The nature_of_involvement of this Offence.
+        :rtype: str
+        """
+        return self._nature_of_involvement
+
+    @nature_of_involvement.setter
+    def nature_of_involvement(self, nature_of_involvement: str):
+        """Sets the nature_of_involvement of this Offence.
+
+
+        :param nature_of_involvement: The nature_of_involvement of this Offence.
+        :type nature_of_involvement: str
+        """
+
+        self._nature_of_involvement = nature_of_involvement
